--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "dev": "cross-env NODE_ENV=development parcel serve ./src/index.html",
     "build": "cross-env NODE_ENV=production parcel build ./src/index.html --out-dir ./dist"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gsap": "^2.1.3"
+  },
   "devDependencies": {
     "@noliaki/eslint-config-typescript-prettier": "^0.0.1",
+    "@types/gsap": "^1.20.2",
     "@types/node": "^12.11.1",
     "cross-env": "^6.0.3",
     "eslint": "^6.5.1",
